delete .idea
